--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <meta name="viewport" content="width=device-width, user-scalable=no,
     initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <title>Barkin-Gilman Group</title>
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logosNav">
-                <img src="./img/barking-group-logo.png" alt="Logo Barkin Group" class="logosNav__thumb">
-                <img src="./img/compass-logo.png" alt="Logo Compass" class="logosNav__thumb">
+        <nav class="navBar">
+            <div class="navBar__logosNav">
+                <img src="./img/barking-group-compass-logo.png" alt="Logo Barkin Group" class="navBar__thumb ">
+                <!-- <img src="./img/compass-logo.png" alt="Logo Compass" class="navBar__thumb"> -->
             </div>
 
-            <div class="contenidoNav">
-                <div class="info__contenidoNav">
-                    <ul>
+            <div class="navBar__contenidoNav">
+                <div class="navBar__info">
+                    <ul class="navBar__listInfo">
                         <li>Peter (954) 675-6656</li>
                         <li>Mark (954) 557-8777</li>
                         <li>Info@BarkinGilman.com</li>
@@ -26,17 +27,17 @@
                         <li>Register</li>
                     </ul>
 
-                    <div class="enlaces__contenidoNav">
-                        <ul>
-                            <li>Exclusive Listings</li>
-                            <li>Homes For Sale</li>
-                            <li>Luxury Condos</li>
-                            <li>Lifestyle</li>
-                            <li>Communites</li>
-                            <li>Sellers</li>
-                            <li>About Us</li>
-                            <li><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd"></path></svg></li>
-                            <li>Contact Us</li>
+                    <div class="navBar__links">
+                        <ul class="navBar__listLinks">
+                            <li class="navBar__link"><a href="#">Exclusive Listings</a></li>
+                            <li class="navBar__link"><a href="#">Homes For Sale</a></li>
+                            <li class="navBar__link"><a href="#">Luxury Condos</a></li>
+                            <li class="navBar__link"><a href="#">Lifestyle</a></li>
+                            <li class="navBar__link"><a href="#">Communites</a></li>
+                            <li class="navBar__link"><a href="#">Sellers</a></li>
+                            <li class="navBar__link"><a href="#">About Us</a></li>
+                            <li class="navBar__search"><a href="#"><i class="fas fa-search"></i></a></li>
+                            <li class="navBar__link--button"><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -47,10 +48,12 @@
     <main>
         <!-- WELCOME -->
         <section class="welcome">
-            <div class="welcome__tittle">
-                <span>Welcome To Fort Lauderdale Florida</span>
-                <h1>BARKIN-GILMAN GROUP</h1>
-                <span>Your Experts In Navigating The South Florida Real Esate Market</span>
+            <div class="welcome__title">
+                <div class="welcome__containerTitle">
+                    <span class="welcome__subtitleTop">Welcome To Fort Lauderdale Florida</span>
+                    <h1 class="welcome__mainTitle">BARKIN-GILMAN GROUP</h1>
+                    <span class="welcome__subtitleBottom">Your Experts In Navigating The South Florida Real Esate Market</span>
+                </div>
             </div>
 
             <div class="welcome__btns">
@@ -59,11 +62,13 @@
             </div>
 
             <form action="" class="welcome__form">
-                <input type="text" id="searchBar" class="welcome_searchBar">
+                <input type="text" id="searchBar" class="welcome__searchBar" placeholder="Search for properties">
+                <button class="welcome__btnSearch"><i class="fas fa-search"></i></button>
             </form>
 
             <div class="welcome__scroll">
                 <p>Scroll for more</p>
+                <span><i class="fas fa-long-arrow-alt-down"></i></span>
             </div>
         </section>
 
