Aregando título en la sección Exclusive Listings

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
 
         <!-- EXCLUSIVE LISTINGS -->
         <section class="exclusiveListings">
+            <div class="exclusiveListings__title">
+                <span class="exclusiveListings__subtitleTop">Fort Lauderdale Luxury & Waterfront Homes</span>
+                <h2 class="exclusiveListings__mainTitle">EXCLUSIVE LISTINGS</h2>
+            </div>
+
             <div class="exclusiveListings__imgs">
                 <div class="exclusiveListings__img">
                     <img src="./img/condos1.jpg" alt="Condo 1" class="exclusiveListings__thumb">
