Agregando los estilos a la sección Exclusive Listings

--- a/index.html
+++ b/index.html
@@ -82,16 +82,20 @@
             <div class="exclusiveListings__imgs">
                 <div class="exclusiveListings__img">
                     <img src="./img/condos1.jpg" alt="Condo 1" class="exclusiveListings__thumb">
-                    <h4 class="exclusiveListings__tittle">$21,850,000</h4>
-                    <p class="exclusiveListings__info">8 Bed(s) • 9 Bath(s) • 8949 Sq.Ft</p>
-                    <p class="exclusiveListings__detail">94100 Overseas Hwy</p>
+                    <div class="exclusiveListings__textImg">
+                        <h4 class="exclusiveListings__imgTitle">$21,850,000</h4>
+                        <p class="exclusiveListings__info">8 Bed(s) • 9 Bath(s) • 8949 Sq.Ft</p>
+                        <p class="exclusiveListings__detail">94100 Overseas Hwy</p>
+                    </div>
                 </div>
 
                 <div class="exclusiveListings__img">
-                    <img src="./img/condos1.jpg" alt="Condo 2" class="exclusiveListings__thumb">
-                    <h4 class="exclusiveListings__tittle">$14,850,000</h4>
-                    <p class="exclusiveListings__info">6 Bed(s) • 8 Bath(s) • 9694 Sq.Ft</p>
-                    <p class="exclusiveListings__detail">8815 Arvida Dr</p>
+                    <img src="./img/condos2.jpg" alt="Condo 2" class="exclusiveListings__thumb">
+                    <div class="exclusiveListings__textImg">
+                        <h4 class="exclusiveListings__imgTitle">$14,850,000</h4>
+                        <p class="exclusiveListings__info">6 Bed(s) • 8 Bath(s) • 9694 Sq.Ft</p>
+                        <p class="exclusiveListings__detail">8815 Arvida Dr</p>
+                    </div>
                 </div>
             </div>
 
