Agregando los estilos a la sección de What makes the Barkin-Gilman Group Diferent?

--- a/index.html
+++ b/index.html
@@ -104,21 +104,25 @@
 
         <!-- WHAT MAKES THE BARKING-GILMAN GROUP DIFFERENT -->
         <section class="whatMakesDifferent">
-            <div class="whatMakesDifferent__video">
-                <img src="./img/barkin-gilman.jpg" alt="Barkin-Gilman" class="whatMakesDifferent__img">
-            </div>
-
-            <article class="whatMakesDifferent__info">
-                <div class="whatMakesDifferent__text">
-                    <h2 class="whatMakesDifferent__tittle">What makes the Barkin-Gilman Group different?</h2>
-                    <span class="whatMakesDifferent__features">Proven track record, longevity in listing and selling luxury estates.</span>
-                    <p class="whatMakesDifferent__description">
-                        Peter Barking and Mark Gilman have been successfully supporting the real state dreams of buyers and sellers in South Florida for over 20 years. In 2002, Peter and Mark teamed to create the Barkin-Gilman Group, a highly respected and successful brand within the South Florida real estate community.
-                    </p>
+            <div class="whatMakesDifferent__container">
+                <div class="whatMakesDifferent__video">
+                    <img src="./img/barkin-gilman.jpg" alt="Barkin-Gilman" class="whatMakesDifferent__img">
                 </div>
-
-                <a href="#" class="whatMakesDifferent__meet">Meet the Group</a>
-            </article>
+                
+                <article class="whatMakesDifferent__info">
+                    <div class="whatMakesDifferent__text">
+                        <h2 class="whatMakesDifferent__title">What makes the Barkin-Gilman Group different?</h2>
+                        <span class="whatMakesDifferent__features">Proven track record, longevity in listing and selling luxury estates.</span>
+                        <p class="whatMakesDifferent__description">
+                            Peter Barking and Mark Gilman have been successfully supporting the real state dreams of buyers and sellers in South Florida for over 20 years. In 2002, Peter and Mark teamed to create the Barkin-Gilman Group, a highly respected and successful brand within the South Florida real estate community.
+                        </p>
+                    </div>
+                
+                    <div class="whatMakesDifferent__btn">
+                        <a href="#" class="whatMakesDifferent__meet">Meet the Group</a>
+                    </div>
+                </article>
+            </div>
         </section>
 
         <!-- DISCOVER -->
