Agregandp estilos a la sección Experience & Expertise

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         <li><a href="#">New Construction Homes</a></li>
                     </ul>
                 </div>
-                
+
                 <div class="lifestyle__wrapper">
                     <div class="lifestyle__cardImg">
                         <img src="./img/lifestyle.jpg" alt="Homes with boat docks" class="lifestyle__thumb">
@@ -391,7 +391,14 @@
                         </div>
                     </div>
                 
-                    <a href="#" class="experienceExpertise__letsChat">Let's Chat</a>
+                    <div class="experienceExpertise__btn">
+                        <a href="#" class="experienceExpertise__letsChat">Let's Chat</a>
+                    </div>
+                </article>
+
+                <div class="experienceExpertise__img">
+                    <img src="./img/experience-_-expertise.jpg" alt="Experience & Expertise" class="experienceExpertise__thumb">
+                </div>
             </div>
 
             <div class="experienceExpertise__enterprises">
@@ -406,11 +413,7 @@
                     <img src="./img/real-trends.png" alt="Real Trends" class="experienceExpertise__thumb">
                 </div>
             </div>
-            </article>
 
-            <div class="experienceExpertise__img">
-                <img src="./img/experience-_-expertise.jpg" alt="Experience & Expertise" class="experienceExpertise__thumb">
-            </div>
         </section>
 
         <!-- TESTIMONIALS -->
@@ -430,8 +433,8 @@
             </div>
 
             <div class="testimonials__buttons">
-                <div class="testimonials__left"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg></div>
-                <div class="testimonials__right"><svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg></div>
+                <div class="testimonials__left"><i class="fas fa-chevron-left"></i></div>
+                <div class="testimonials__right"><i class="fas fa-chevron-right"></i></div>
             </div>
         </section>
     </main>
