Agregando los estilos a la sección Testimonials

--- a/index.html
+++ b/index.html
@@ -420,21 +420,20 @@
         <section class="testimonials">
             <h2 class="testimonials__title">Testimonials</h2>
 
-            <div class="testimonials__wrapper">
-                <div class="testimonials__testimonial">
-                    <p class="testimonials__message">
-                        Peter a Mark have been my real state agents for a couple of years now. They help us buy our waterfron home in Fort Lauderdale, finding the perfect home and perfect deal. <br>
-
-                        The process seemed super fast and easy. Peter and Mark were on top of every detail. We highly recommend them.
-                    </p>
-
-                    <span class="testimonials__author">Joseph Smithsonian - Florida</span>
+            <div class="testimonials__slider">
+                <div class="testimonials__wrapper">
+                    <div class="testimonials__testimonial">
+                        <p class="testimonials__message">Peter a Mark have been my real state agents for a couple of years now. They help us buy our waterfron home in Fort Lauderdale, finding the perfect home and perfect deal.</p>
+                        <p class="testimonials__message">The process seemed super fast and easy. Peter and Mark were on top of every detail. We highly recommend them.</p>
+                
+                        <span class="testimonials__author">Joseph Smithsonian - Florida</span>
+                    </div>
                 </div>
-            </div>
-
-            <div class="testimonials__buttons">
-                <div class="testimonials__left"><i class="fas fa-chevron-left"></i></div>
-                <div class="testimonials__right"><i class="fas fa-chevron-right"></i></div>
+                
+                <div class="testimonials__buttons">
+                    <div class="testimonials__left"><i class="fas fa-chevron-left"></i></div>
+                    <div class="testimonials__right"><i class="fas fa-chevron-right"></i></div>
+                </div>
             </div>
         </section>
     </main>
