Agregando los estilos del footer

--- a/index.html
+++ b/index.html
@@ -438,97 +438,111 @@
         </section>
     </main>
 
-    <footer>
-        <section class="logoFooter">
-            <img src="./img/barking-group-logo.png" alt="Logo Barkin Group" class="logoFooter__thumb">
+    <footer class="footer">
+        <section class="footer__logoFooter">
+            <img src="./img/barking-group-logo.png" alt="Logo Barkin Group" class="footer__thumb">
         </section>
 
-        <section class="infoFooter">
-            <div class="infoFooter__company">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">Out Team</a></li>
-                    <li class="infoFooter__item"><a href="#">Meet Peter Barkin</a></li>
-                    <li class="infoFooter__item"><a href="#">Testimonials</a></li>
-                    <li class="infoFooter__item"><a href="#">Contact Us</a></li>
+        <section class="footer__infoFooter">
+            <div class="footer__group">
+                <h4 class="footer__title">COMPANY</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">Out Team</a></li>
+                    <li class="footer__item"><a href="#">Meet Peter Barkin</a></li>
+                    <li class="footer__item"><a href="#">Testimonials</a></li>
+                    <li class="footer__item"><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="infoFooter__contact">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">PETER (954) 675-6656</a></li>
-                    <li class="infoFooter__item"><a href="#">MARK (954) 557-8777</a></li>
-                    <li class="infoFooter__item"><a href="#">12 E. Las Olas Blvd Suite 103</a></li>
-                    <li class="infoFooter__item"><a href="#">FortLauderdale, FL 33301</a></li>
+
+            <div class="footer__group">
+                <h4 class="footer__title">CONTACT</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">PETER (954) 675-6656</a></li>
+                    <li class="footer__item"><a href="#">MARK (954) 557-8777</a></li>
+                    <li class="footer__item"><a href="#">12 E. Las Olas Blvd Suite 103</a></li>
+                    <li class="footer__item"><a href="#">FortLauderdale, FL 33301</a></li>
                 </ul>
             </div>
-            <div class="infoFooter__company2">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">About Barkin Gilman</a></li>
-                    <li class="infoFooter__item"><a href="#">Exclusive Listings</a></li>
-                    <li class="infoFooter__item"><a href="#">Sellers</a></li>
-                    <li class="infoFooter__item"><a href="#">Blog</a></li>
-                    <li class="infoFooter__item"><a href="#">Contact Us</a></li>
+
+            <div class="footer__group">
+                <h4 class="footer__title">COMPANY</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">About Barkin Gilman</a></li>
+                    <li class="footer__item"><a href="#">Exclusive Listings</a></li>
+                    <li class="footer__item"><a href="#">Sellers</a></li>
+                    <li class="footer__item"><a href="#">Blog</a></li>
+                    <li class="footer__item"><a href="#">Contact Us</a></li>
                 </ul>
             </div>
-            <div class="infoFooter__properties">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">Exclusive Listings</a></li>
-                    <li class="infoFooter__item"><a href="#">Homes For Sale</a></li>
-                    <li class="infoFooter__item"><a href="#">Luxury Condos</a></li>
-                    <li class="infoFooter__item"><a href="#">Communities</a></li>
-                    <li class="infoFooter__item"><a href="#">Leases</a></li>
+
+            <div class="footer__group">
+                <h4 class="footer__title">PROPERTIES</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">Exclusive Listings</a></li>
+                    <li class="footer__item"><a href="#">Homes For Sale</a></li>
+                    <li class="footer__item"><a href="#">Luxury Condos</a></li>
+                    <li class="footer__item"><a href="#">Communities</a></li>
+                    <li class="footer__item"><a href="#">Leases</a></li>
                 </ul>
             </div>
-            <div class="infoFooter__neighborhoods">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">Harbor Beach</a></li>
-                    <li class="infoFooter__item"><a href="#">Las Olas Isles</a></li>
-                    <li class="infoFooter__item"><a href="#">Rio Vista</a></li>
-                    <li class="infoFooter__item"><a href="#">Coral Ridge</a></li>
-                    <li class="infoFooter__item"><a href="#">View All</a></li>
+
+            <div class="footer__group">
+                <h4 class="footer__title">NEIGHBORHOODS</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">Harbor Beach</a></li>
+                    <li class="footer__item"><a href="#">Las Olas Isles</a></li>
+                    <li class="footer__item"><a href="#">Rio Vista</a></li>
+                    <li class="footer__item"><a href="#">Coral Ridge</a></li>
+                    <li class="footer__item"><a href="#">View All</a></li>
                 </ul>
             </div>
-            <div class="infoFooter__luxuryCondos">
-                <ul class="infoFooter__list">
-                    <li class="infoFooter__item"><a href="#">Glass Fort Lauderdale</a></li>
-                    <li class="infoFooter__item"><a href="#">Four Seasons</a></li>
-                    <li class="infoFooter__item"><a href="#">Aquavue</a></li>
-                    <li class="infoFooter__item"><a href="#">Aqua Blue</a></li>
-                    <li class="infoFooter__item"><a href="#">View All</a></li>
+
+            <div class="footer__group">
+                <h4 class="footer__title">LUXURY CONDOS</h4>
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#">Glass Fort Lauderdale</a></li>
+                    <li class="footer__item"><a href="#">Four Seasons</a></li>
+                    <li class="footer__item"><a href="#">Aquavue</a></li>
+                    <li class="footer__item"><a href="#">Aqua Blue</a></li>
+                    <li class="footer__item"><a href="#">View All</a></li>
                 </ul>
             </div>
         </section>
 
-        <section class="compass">
-            <div class="compass__logoCompass">
+        <section class="footer__compass">
+            <div class="footer__logoCompass">
                 <img src="./img/compass-logo.png" alt="Compass Logo" class="compass__thumb">
             </div>
 
-            <div class="compass__socialMedias">
-                <ul class="compass__listSocialMedias">
-                    <li class="compass__socialMedia">Facebook</li>
-                    <li class="compass__socialMedia">Instagram</li>
-                    <li class="compass__socialMedia">Twitter</li>
-                    <li class="compass__socialMedia">YouTube</li>
+            <div class="footer__socialMedias">
+                <ul class="footer__listSocialMedias">
+                    <li class="footer__socialMedia">Facebook</li>
+                    <li class="footer__socialMedia">•</li>
+                    <li class="footer__socialMedia">Instagram</li>
+                    <li class="footer__socialMedia">•</li>
+                    <li class="footer__socialMedia">Twitter</li>
+                    <li class="footer__socialMedia">•</li>
+                    <li class="footer__socialMedia">YouTube</li>
                 </ul>
             </div>
         </section>
 
-        <section class="compass__details">
-            <p class="compass__description">
+        <section class="footer__details">
+            <p class="footer__description">
                 Barkin Gilman Group is a Team of Real state agents affiliated with compas florida. llc. a licenced real estate broker and abides by equal housing opportunity laws. all material presented herein is intended for informational purposed only. information is compiled from sources deemed reliable but is subject to errors, omissions, changes in pricem condition, sale, or withdrawal without notice. no statement is made as to accuracy of any description. all measurements and square footages are approximate. this is not intended to solicit property already listed. nothin herein shall be construed as legal, accounting or other professional advice outside the realm of real estate brokerage.
             </p>
         </section>
 
-        <section class="terms">
-            <ul class="terms__listTerms">
-                <li class="terms__term">Copyright 2021</li>
-                <li class="terms__term">Privacy Policy</li>
-                <li class="terms__term">Terms & Conditions</li>
-                <li class="terms__term">Accesibility & ADA Compliance</li>
+        <section class="footer__terms">
+            <ul class="footer__listFooter">
+                <li class="footer__term"><a href="#">© Copyright 2021</a></li>
+                <li class="footer__term"><a href="#">Privacy Policy</a></li>
+                <li class="footer__term"><a href="#">Terms & Conditions</a></li>
+                <li class="footer__term"><a href="#">Accesibility & ADA Compliance</a></li>
             </ul>
 
-            <div class="terms__realtor">
-                <img src="./img/realtor.svg" alt="Realtor Logo" class="terms__thumb">
+            <div class="footer__realtor">
+                <img src="./img/realtor.svg" alt="Realtor Logo" class="footer__thumbRealtor">
             </div>
         </section>
     </footer>
