Añadiendo hamburguer y trabajando responsive del nav bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                 <img src="./img/barking-group-compass-logo.png" alt="Logo Barkin Group" class="navBar__thumb ">
                 <!-- <img src="./img/compass-logo.png" alt="Logo Compass" class="navBar__thumb"> -->
             </div>
+            
+            <div class="navBar__hamburguer"><i class="fas fa-bars"></i></div>
 
             <div class="navBar__contenidoNav">
                 <div class="navBar__info">
@@ -28,6 +30,7 @@
                     </ul>
 
                     <div class="navBar__links">
+                        
                         <ul class="navBar__listLinks">
                             <li class="navBar__link"><a href="#">Exclusive Listings</a></li>
                             <li class="navBar__link"><a href="#">Homes For Sale</a></li>
