Generando iFrame al clickear imagen en sección What makes the Barkin-Gilman Group different

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="navBar__hamburguer" id="hamburguer"><i class="fas fa-bars"></i></div>
         </nav>
     </header>
@@ -109,7 +109,7 @@
         <!-- WHAT MAKES THE BARKING-GILMAN GROUP DIFFERENT -->
         <section class="whatMakesDifferent">
             <div class="whatMakesDifferent__container">
-                <div class="whatMakesDifferent__video">
+                <div class="whatMakesDifferent__video" id="videoContainer">
                     <img loading="lazy" src="./img/barkin-gilman.jpg" alt="Barkin-Gilman" class="whatMakesDifferent__img">
                 </div>
                 
